2013-05-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ # 15497]
	* sysdeps/powerpc/fpu/e_hypot.c (GET_TWO_FLOAT_WORD): Fix test for
	negative infinity on POWER6 or lower.
	* sysdeps/powerpc/fpu/e_hypotf.c (GET_TWO_FLOAT_WORD): Likewise.

2013-04-30  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/Versions: Add __vdso_time symbol.
	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h: Add __vdso_time
	definition.
	(VDSO_IFUNC_RET): Cast to void * to silence compiler warning.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c
	(_libc_vdso_platform_setup): Add __vdso_time initialization.
	* sysdeps/unix/sysv/linux/powerpc/time.c: New file: time implementation
	for PowerPC using vDSO where is avaliable or gettimeofday as a fallback.

2013-04-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5/fpu/s_modf.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modf.c: ... this.
	* sysdeps/powerpc/power5/fpu/s_modff.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modff.c: ... this.
	* sysdeps/powerpc/powerpc32/power5+/Implies: Add powerpc/power5+ and
	powerpc/power5+/fpu folders.
	* sysdeps/powerpc/powerpc64/power5+/Implies: Likewise.

2013-04-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5/fpu/s_modf.c: New file: modf optimization for
	POWER.
	* sysdeps/powerpc/power5/fpu/s_modff.c: New file: modff optimization
	for POWER.
	* sysdeps/powerpc/powerpc64/power5/Implies: Add powerpc/power5 and
	powerpc/power5/fpu folders.
	* sysdeps/powerpc/powerpc32/power5/Implies: Likewise.

2013-04-02  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/fpu/s_rint.S: Remove branch prediction
	instructions.
	* sysdeps/powerpc/powerpc32/fpu/s_rintf.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rint.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rintf.S: Likewise.
	* benchtests/Makefile: Add rint benchtest.
	* benchtests/rint-inputs: Input for rint benchtest.
